# pkmn_tcgp_metagame

./: .env.example  .gitignore  README.md  compose.yaml  dagster.yaml  infrastructure.md  pyproject.toml
initdb/: init-user-db.sh
pkmn_tcgp_metagame/: definitions.py  project.py
pkmn_tcgp_metagame/assets/: constants.py  extract.py  load.py  metabase.py  transform.py
pkmn_tcgp_metagame/metabase/: helpers.py  metabase_resource.py
pkmn_tcgp_metagame/postgres/: helpers.py  postgres_io_manager.py  postgres_resource.py
pkmn_tcgp_metagame_sql/: .sqlfluff  dbt_project.yml  profiles.yml
pkmn_tcgp_metagame_sql/macros/: nb_decklists.sql
pkmn_tcgp_metagame_sql/models/: groups.yml  sources.yml
pkmn_tcgp_metagame_sql/models/cards/: cards.sql  schema.yml
pkmn_tcgp_metagame_sql/models/decklists/: decklists.sql  decklists_aggregated.sql  decklists_pruned.sql  schema.yml
pkmn_tcgp_metagame_sql/models/decks/: decks.sql  schema.yml
pkmn_tcgp_metagame_sql/models/evolutions/: evolutions.sql  schema.yml
pkmn_tcgp_metagame_sql/models/matches/: matches.sql  schema.yml
pkmn_tcgp_metagame_sql/models/nb_decklists/: nb_decklists_per_season.sql  nb_decklists_per_season_per_day.sql  nb_decklists_per_season_per_deck.sql  nb_decklists_per_season_per_week.sql  schema.yml
pkmn_tcgp_metagame_sql/models/sets/: schema.yml  sets.sql
pkmn_tcgp_metagame_sql/models/tournaments/: schema.yml  tournaments.sql
pkmn_tcgp_metagame_sql/models/usage_rate/: card_in_deck_usage.sql  deck_usage.sql  schema.yml
pkmn_tcgp_metagame_sql/models/win_rate/: deck_against_deck_win_rate.sql  schema.yml  (+1 more)
(+9 files in other folders)
